--- a/CuaHangThucPham/CuaHangThucPham/Areas/Admin/Views/AccountAdmin/Admin.cshtml
+++ b/CuaHangThucPham/CuaHangThucPham/Areas/Admin/Views/AccountAdmin/Admin.cshtml
@@ -8,7 +8,7 @@
 <div class="container-fluid">
 
     <!-- Page Heading -->
-    <h1 class="h3 mb-2 text-gray-800">Table</h1>
+    
 
     <!-- DataTales Example -->
     <div class="card shadow mb-4">
@@ -54,7 +54,7 @@
                                 }
                                 else
                                 {
-                                    <td>Bị khóa</td>
+                                    <td>Khóa</td>
                                 }
                             </tr>
                         }
