--- a/CuaHangThucPham/CuaHangThucPham/Areas/Admin/Views/AccountAdmin/Customer.cshtml
+++ b/CuaHangThucPham/CuaHangThucPham/Areas/Admin/Views/AccountAdmin/Customer.cshtml
@@ -8,7 +8,7 @@
 <div class="container-fluid">
 
     <!-- Page Heading -->
-    <h1 class="h3 mb-2 text-gray-800">Table</h1>
+    
 
     <!-- DataTales Example -->
     <div class="card shadow mb-4">
@@ -51,11 +51,11 @@
                                 }
                                 @if (customers[i].Prohibit == 1)
                                 {
-                                    <td>Hoạt động</td>
+                                    <td style="color:dodgerblue">Hoạt động</td>
                                 }
                                 else
                                 {
-                                    <td>Bị khóa</td>
+                                    <td style="color:red">Khóa</td>
                                 }
                                 <td>
                                     <div class="dropdown mb-4">
@@ -65,11 +65,11 @@
                                         <div class="dropdown-menu animated--fade-in" aria-labelledby="dropdownMenuButton">
                                             @if (customers[i].Prohibit == 1)
                                             {
-                                                <a class="dropdown-item" href="#">Bị khóa</a>
+                                                <a class="dropdown-item" href="UpdateStatusCustomer?id=@customers[i].CustomerID&prohibit=2">Khóa</a>
                                             }
                                             else
                                             {
-                                                <a class="dropdown-item" href="#">Hoạt động</a>
+                                                <a class="dropdown-item" href="UpdateStatusCustomer?id=@customers[i].CustomerID&prohibit=1">Hoạt động</a>
                                             }
                                         </div>
                                     </div>
