--- a/CuaHangThucPham/CuaHangThucPham/Areas/Admin/Views/ProductAdmin/EditProduct.cshtml
+++ b/CuaHangThucPham/CuaHangThucPham/Areas/Admin/Views/ProductAdmin/EditProduct.cshtml
@@ -85,7 +85,7 @@
                                         <div class="form-group row">
                                             <label for="example-date-input" class="col-sm-3 col-form-label">Ngày Thêm</label>
                                             <div class="col-sm-9">
-                                                <input class="form-control" name="date" type="" value="@ViewBag.DateAdded" id="example-date-input">
+                                                <input class="form-control" name="date" type="text" value="@ViewBag.DateAdded" id="example-date-input">
                                             </div>
                                         </div>
                                     </div>
