--- a/CuaHangThucPham/CuaHangThucPham/Areas/Admin/Views/BlogAdmin/AddBlog.cshtml
+++ b/CuaHangThucPham/CuaHangThucPham/Areas/Admin/Views/BlogAdmin/AddBlog.cshtml
@@ -13,19 +13,20 @@
                         <div class="card-body">
                             <h4 class="mt-0 header-title">Thêm Mới Bài Viết</h4>
                             </br>
-                            <form method="post" action="/Admin/ProductAdmin/AddProduct" enctype="multipart/form-data">
+                            <form method="post" action="/Admin/BlogAdmin/AddBlog" enctype="multipart/form-data">
                                 <div class="row">
                                     <div class="col-sm-6">
                                         <div class="form-group row">
                                             <label for="example-text-input" class="col-sm-3 col-form-label">Tiêu đề</label>
                                             <div class="col-sm-9">
-                                                <input class="form-control" type="text" placeholder="" id="example-text-input" name="productname" required>
+                                                <input class="form-control" type="text" placeholder="" id="example-text-input" name="title" required>
                                             </div>
                                         </div>
                                         <div class="form-group row">
                                             <label for="example-text-input" class="col-sm-3 col-form-label">Người thêm</label>
                                             <div class="col-sm-9">
-                                                <input class="form-control" type="text" placeholder="" id="example-text-input" name="productname" required>
+                                                <input class="form-control" type="text" value="@ViewBag.name" placeholder="" id="example-text-input" name="name" required readonly>
+                                                <input hidden class="form-control" type="text" value="@ViewBag.id" placeholder="" id="example-text-input" name="cusid" required>
                                             </div>
                                         </div>
                                         <div class="m-b-30">
@@ -40,13 +41,13 @@
                                         <div class="form-group row">
                                             <label for="example-text-input-sm" class="col-sm-2 col-form-label">Nội dung</label>
                                             <div class="col-sm-10">
-                                                <textarea required name="summary" class="form-control" rows="16"></textarea>
+                                                <textarea required name="content" class="form-control" rows="16"></textarea>
                                             </div>
                                         </div>
                                         <div class="form-group row">
                                             <label for="example-date-input" class="col-sm-3 col-form-label">Ngày Thêm</label>
                                             <div class="col-sm-9">
-                                                <input class="form-control" type="date" value="@String.Format("{0:yyyy-MM-dd}", DateTime.Now)" id="example-date-input">
+                                                <input class="form-control" type="date" name="date" value="@String.Format("{0:yyyy-MM-dd}", DateTime.Now)" id="example-date-input">
                                             </div>
                                         </div>
                                     </div>
