--- a/CuaHangThucPham/CuaHangThucPham/Areas/Admin/Views/VoucherAdmin/AddVoucher.cshtml
+++ b/CuaHangThucPham/CuaHangThucPham/Areas/Admin/Views/VoucherAdmin/AddVoucher.cshtml
@@ -11,45 +11,45 @@
                 <div class="col-12">
                     <div class="card">
                         <div class="card-body">
-                            <h4 class="mt-0 header-title">Thêm Mới Khuyễn Mãi</h4>
-                            </br>
-                            <form method="post" action="/Admin/ProductAdmin/AddProduct" enctype="multipart/form-data">
+                            <h4 class="mt-0 header-title">Thêm Mới Khuyễn Mãi</h4></br>
+                            <form method="post" action="/Admin/VoucherAdmin/AddVoucher" enctype="multipart/form-data">
                                 <div class="row" style="padding-left: 30%">
                                     <div class="col-sm-6">
                                         <div class="form-group row">
                                             <label for="example-text-input" class="col-sm-4 col-form-label">Người Thêm</label>
                                             <div class="col-sm-8">
-                                                <input class="form-control" type="text" placeholder="" id="example-text-input" name="productname" required>
+                                                <input class="form-control" type="text" placeholder="" value="@ViewBag.name" id="example-text-input" name="cusname" required readonly>
+                                                <input class="form-control" type="text" placeholder="" value="@ViewBag.id" id="example-text-input" name="cusid" required hidden>
                                             </div>
                                         </div>
                                         <div class="form-group row">
                                             <label for="example-text-input" class="col-sm-4 col-form-label">Mã Khuyến Mãi</label>
                                             <div class="col-sm-8">
-                                                <input class="form-control" name="brand" type="text" placeholder="" id="example-text-input" required>
+                                                <input class="form-control" name="makhuyenmai" type="text" placeholder="" id="example-text-input" required>
                                             </div>
                                         </div>
                                         <div class="form-group row">
                                             <label for="example-text-input" class="col-sm-4 col-form-label">Phần Trăm Giảm</label>
                                             <div class="col-sm-8">
-                                                <input class="form-control" name="model" type="text" placeholder="" id="example-text-input" required>
+                                                <input class="form-control" name="phantramgiam" type="number" placeholder="" id="example-text-input" required min="0" max="100">
                                             </div>
                                         </div>
                                         <div class="form-group row">
                                             <label for="example-text-input" class="col-sm-4 col-form-label">Giảm Lớn Nhất</label>
                                             <div class="col-sm-8">
-                                                <input class="form-control" name="suppiler" type="text" placeholder="" id="example-text-input" required>
+                                                <input class="form-control" name="giamlonnhat" type="number" placeholder="" id="example-text-input" required>
                                             </div>
                                         </div>
                                         <div class="form-group row">
                                             <label for="example-text-input" class="col-sm-4 col-form-label">Đơn Hàng Tối Thiểu</label>
                                             <div class="col-sm-8">
-                                                <input class="form-control" name="suppiler" type="text" placeholder="" id="example-text-input" required>
+                                                <input class="form-control" name="donhangtoithieu" type="number" placeholder="" id="example-text-input" required>
                                             </div>
                                         </div>
                                         <div class="form-group row">
                                             <label for="example-date-input" class="col-sm-4 col-form-label">Ngày Hến Hạn</label>
                                             <div class="col-sm-8">
-                                                <input class="form-control" type="date" value="@String.Format("{0:yyyy-MM-dd}", DateTime.Now)" id="example-date-input">
+                                                <input class="form-control" name="thoigian" type="date" value="@String.Format("{0:yyyy-MM-dd}", DateTime.Now)" id="example-date-input">
                                             </div>
                                         </div>
                                     </div>
